--- a/budjet/budjetapp/templates/transactions.html
+++ b/budjet/budjetapp/templates/transactions.html
@@ -11,23 +11,26 @@
 
 <h1>Transaction History</h1>
 <table class="table table-hover">
-    <thead>
-      <tr>
-        {% for column in columns %}
-            <th id="column" scope="col">{{column}}</th>
-        {% endfor %}
-      </tr>
-    </thead>
-    <tbody>
-        {% for row in rows %}
-            <tr>
-                {% for entry in row  %}
-                    <th scope="col">{{entry}}</th>
-                {% endfor %}
-            </tr>     
-    {%empty%}
-        <h1>NO DATA</h1>
-    {% endfor %}
+    {% if rows %}
+        <thead>
+        <tr>
+            {% for column in columns %}
+                <th id="column" scope="col">{{column}}</th>
+            {% endfor %}
+        </tr>
+        </thead>
+        <tbody>
+            {% for row in rows %}
+                <tr>
+                    {% for entry in row  %}
+                        <th scope="col">{{entry}}</th>
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+    {% else %}     
+        <h2>NO DATA</h2>
+
+    {% endif %}
 
     </tbody>
   </table>
